NCL-7777 Fix content jumping issue

--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -2,3 +2,7 @@
   top: 0;
   z-index: 100;
 }
+
+.page-section-tabs :global(.pf-c-tabs) {
+  min-height: 42px;
+}
